# PiLibrary

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile
src/: .gitignore  CMakeLists.txt  PiLibrary.pro  README.md
src/client/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  bookbriefmanager.cpp  bookbriefmanager.h  bookmanager.cpp  bookmanager.h  client.cpp  client.h  client.pro  client.qrc  client.sln  client.vcxproj  dialoglogin.cpp  dialoglogin.h  dialogmodify.cpp  dialogmodify.h  dialogsignup.cpp  dialogsignup.h  getrecords.cpp  getrecords.h  listwidgetbook.cpp  listwidgetbook.h  listwidgetborrowrecord.cpp  listwidgetborrowrecord.h  listwidgetbrowserecord.cpp  listwidgetbrowserecord.h  listwidgetkeeprecord.cpp  listwidgetkeeprecord.h  listwidgetloginrecord.cpp  listwidgetloginrecord.h  listwidgetstarrecord.cpp  listwidgetstarrecord.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  (+41 more)
src/client/core/: Book.cpp  Book.h  BookBrief.cpp  BookBrief.h  BorrowRecord.cpp  BorrowRecord.h  BrowseRecord.cpp  BrowseRecord.h  KeepRecord.cpp  KeepRecord.h  LoginRecord.cpp  LoginRecord.h  Resource.cpp  Resource.h  StarRecord.cpp  StarRecord.h  User.cpp  User.h
src/client/dialog/: DialogBook.cpp  DialogBook.h  DialogChooseTime.cpp  DialogChooseTime.h  DialogLogin.cpp  DialogLogin.h  DialogModify.cpp  DialogModify.h  DialogModifyBook.cpp  DialogModifyBook.h  DialogModifyUser.cpp  DialogModifyUser.h  DialogRefresh.cpp  DialogRefresh.h  DialogSignUp.cpp  DialogSignUp.h
src/client/i18n/: zh_CN.qm  zh_CN.ts
src/client/listwidget/: ListWidgetBorrowRecord.cpp  ListWidgetBorrowRecord.h  ListWidgetBrowseBook.cpp  ListWidgetBrowseBook.h  ListWidgetBrowseRecord.cpp  ListWidgetBrowseRecord.h  ListWidgetKeepRecord.cpp  ListWidgetKeepRecord.h  ListWidgetLoginRecord.cpp  ListWidgetLoginRecord.h  ListWidgetStarRecord.cpp  ListWidgetStarRecord.h
src/client/mainwindow/: MainWindow.cpp  MainWindow.h
src/client/manager/: BookBriefManager.cpp  BookBriefManager.h  BookManager.cpp  BookManager.h  UserManager.cpp  UserManager.h
src/client/object/: GetRecords.cpp  GetRecords.h  GetRerords.cpp
src/client/page/: PageAbout.cpp  PageAbout.h  PageAddBook.cpp  PageAddBook.h  PageAdminister.cpp  PageAdminister.h  PageBrowse.cpp  PageBrowse.h  PageFavorite.cpp  PageFavorite.h  PageRecord.cpp  PageRecord.h  PageReturn.cpp  PageReturn.h  PageSetting.cpp  PageSetting.h
src/client/resource/: resource.qrc
src/client/resource/i18n/: zh_CN.qm  zh_CN.ts
src/client/resource/style/DialogBook/: style.css
src/client/resource/style/DialogSignUp/: style.css
src/client/resource/style/ListWidgetNavigation/: style.css
src/client/resource/style/WidgetLogin/: style.css  title.css
src/client/resource/style/WidgetMain/: style.css
src/client/thread/: ThreadBorrowBook.cpp  ThreadBorrowBook.h  ThreadGetBook.cpp  ThreadGetBook.h  ThreadGetBookBrief.cpp  ThreadGetBookBrief.h  ThreadGetNewBookList.cpp  ThreadGetNewBookList.h  ThreadGetRecord.cpp  ThreadGetRecord.h  ThreadGetSearchBookList.cpp  ThreadGetSearchBookList.h  ThreadGetTopBookList.cpp  ThreadGetTopBookList.h  ThreadLogin.cpp  ThreadLogin.h  ThreadLogout.cpp  ThreadLogout.h  ThreadModify.cpp  ThreadModify.h  ThreadModifyUser.cpp  ThreadModifyUser.h  ThreadNetwork.cpp  ThreadNetwork.h  ThreadReturnBook.cpp  ThreadReturnBook.h  ThreadSetBook.cpp  ThreadSetBook.h  ThreadSetPriority.cpp  ThreadSetPriority.h  ThreadSignUp.cpp  ThreadSignUp.h  ThreadStarBook.cpp  ThreadStarBook.h  ThreadUnStarBook.cpp  ThreadUnStarBook.h
src/client/utils/: GetRecords.h  GetRerords.cpp
src/client/widget/: MainWidget.cpp  MainWidget.h  WidgeThead.cpp  WidgeThead.h  WidgetHead.cpp  WidgetHead.h  WidgetLogin.cpp  WidgetLogin.h  WidgetLogin.ui  WidgetLoginTitle.cpp  WidgetLoginTitle.h  WidgetMain.cpp  WidgetMain.h  WidgetSearchBook.cpp  WidgetSearchBook.h  WidgetSetBook.cpp  WidgetSetBook.h
src/core/: CMakeLists.txt  README.md  Resource.cpp  Resource.h  SocketInfo.cpp  abstractuser.cpp  abstractuser.h  administer.cpp  administer.h  book.cpp  book.h  bookbrief.cpp  bookbrief.h  bookcore.cpp  bookcore.h  borrowrecord.cpp  borrowrecord.h  borrowrecordmanager.cpp  borrowrecordmanager.h  browserecord.cpp  browserecord.h  browserecordmanager.cpp  browserecordmanager.h  core.h  keeprecord.cpp  keeprecord.h  loginhistory.cpp  loginhistory.h  loginhistorymanager.cpp  loginhistorymanager.h  loginrecord.cpp  loginrecord.h  loginrecordmanager.cpp  loginrecordmanager.h  recordmanager.h  resource.cpp  resource.h  socketinfo.cpp  socketinfo.h  starrecord.cpp  (+11 more)
src/server/: .gitignore  CMakeLists.txt  README.md  Server.cpp  Server.h  Session.h  SessionManager.cpp  SessionManager.h  SocketWrapper.cpp  SocketWrapper.h  UserManager.cpp  UserManager.h  main.cpp  server.cpp  server.h  server.sln  server.vcxproj  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  socketinfo.cpp  socketinfo.h  socketwrapper.cpp  socketwrapper.h  usermanager.cpp  usermanager.h  utils.cpp  utils.h  values.cpp  values.h  xserver.cpp  xserver.h
src/server/core/: Server.cpp  Server.h  Session.cpp
src/server/manager/: SessionManager.cpp  SessionManager.h  SocketManager.cpp  SocketManager.h  UserManager.cpp  UserManager.h
src/server/test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
src/server/test1/: .gitignore  test.cpp  test1.vcxproj
src/server/test2/: .gitignore  test2.vcxproj
src/test/: CMakeLists.txt  testServer1.cpp  testServer2.cpp  testServer4.cpp
