option(BUILD_STATIC_X "Build static version" OFF)
option(BUILD_CLIENT_X "Build client" OFF)
option(BUILD_SERVER_X "Build server" OFF)
option(BUILD_BOTH_X "Build server, client" OFF)
option(BUILD_ALL_X "Build server, client, test" OFF)

if (NOT BUILD_CLIENT_X AND NOT BUILD_SERVER_X AND NOT BUILD_BOTH_X AND NOT BUILD_ALL_X)
    message(STATUS "=========Use BUILD_BOTH_X(default)========")
    set(BUILD_BOTH_X ON)
endif()

if (BUILD_STATIC_X)
    message(STATUS "==========Build Static Version==========")
else()
    message(STATUS "==========Build Dynamic Version=========")
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    message(STATUS "==========Build Release Version==========")
else()
    message(STATUS "==========Build Debug Version===========")
endif()

message(STATUS "===============Build Core===============")
add_subdirectory(core)

if (BUILD_CLIENT_X OR BUILD_BOTH_X OR BUILD_ALL_X)
    message(STATUS "==============Build Client==============")
    add_subdirectory(client)
endif()

if (BUILD_SERVER_X OR BUILD_BOTH_X OR BUILD_ALL_X)
    message(STATUS "==============Build Server==============")
    add_subdirectory(server)
endif()

if (BUILD_SERVER_X_TEST OR BUILD_ALL_X)
    message(STATUS "===============Build Test===============")
    add_subdirectory(test)
endif()